--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <th scope="col">Title</th>
         <th scope="col">Author</th>
         <th scope="col">ISBN</th>
+        <th scope="col">Description</th>
       </tr>
     </thead>
       <tbody  id="books">
